# mnote

./: .gitignore  gameTheoryNote.md
DeePC/: behavior system theory.md  note.md
Dynamic Programming/: course_note.md
bezier/: cal_bezier_curve.py  cal_bspline_curve.py
braids/: note.md  test.py
classic mechanics/: note.md
cmake/play_build/: CMakeCache.txt  Makefile  TutorialConfig.h  cmake_install.cmake
cmake/play_build/MathFunctions/: Makefile  cmake_install.cmake
cmake/play_cmake/: CMakeLists.txt  TutorialConfig.h.in  tutorial.cxx
cmake/play_cmake/MathFunctions/: CMakeLists.txt
complex/: note.md
decision making/: AI a modern approach note.md  Learning based method review.md  literature review.md
game theory/: exercise.md  gameTheoryNote.md
game theory/scripts/: test_nashpy.py
postgresql/: learnSQL.md
